force-app/main/default/objects/Payment_Link_Object_Mapping__mdt/Payment_Link_Object_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Payment Link Object Mapping</label>
    <pluralLabel>Payment Link Object Mappings</pluralLabel>
</CustomObject>