force-app/main/default/objects/Payment_Link_Object_Mapping__mdt/fields/Amount_Field__c.field-meta.xml
<CustomField>
    <fullName>Amount_Field__c</fullName>
    <label>Amount Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>