force-app/main/default/objects/Payment_Link_Object_Mapping__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>