force-app/main/default/objects/Payment_Link_Object_Mapping__mdt/fields/Reference_Field__c.field-meta.xml
<CustomField>
    <fullName>Reference_Field__c</fullName>
    <label>Reference Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>